--- a/app/new-items.html
+++ b/app/new-items.html
@@ -31,16 +31,137 @@
                                 <a class="header__phone" href="tel:+61383766284">+61 3 8376 6284</a>
                             </div>
                             <div class="header__box">
-                                <a class="basket" href="#"></a>
-                                <a class="header__btn header__btn-login" href="">Login</a>
-                                <a class="header__btn header__btn-register" href="">Register</a>
+                                <div class="notification__box">
+                                    <a class="notification header__circle active icon-bell-o" href="#">
+                                        <span>8</span>
+                                    </a>
+                                    <div class="circle__menu notification__menu">
+                                        <a class="circle__item icon-bell-o icons-color" href="#">
+                                            <img class="circle__images" src="images/content/user-message.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-bell-o" href="#">
+                                            <img class="circle__images" src="images/content/user-message.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-bell-o" href="#">
+                                            <img class="circle__images" src="images/content/user-message.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="message__box">
+                                    <a class="message header__circle active icon-envelope-o" href="#">
+                                        <span>5</span>
+                                    </a>
+                                    <div class="circle__menu message__menu">
+                                        <a class="circle__item icon-envelope-o icons-color" href="#">
+                                            <img class="circle__images" src="images/content/user-message.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Kazi Fahim</div>
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-envelope-o" href="#">
+                                            <img class="circle__images" src="images/content/user-message.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Kazi Fahim</div>
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-mail-reply" href="#">
+                                            <img class="circle__images" src="images/content/user-message.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Kazi Fahim</div>
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="basket__box">
+                                    <a class="basket header__circle active icon-shopping-cart" href="#">
+                                        <span>8</span>
+                                    </a>
+                                    <div class="circle__menu">
+                                        <div class="circle__item">
+                                            <img class="circle__images" src="images/content/basket.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Grand Ballet</div>
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-price">$59</div>
+                                            </div>
+                                        </div>
+                                        <div class="circle__item">
+                                            <img class="circle__images" src="images/content/basket.jpg" alt="">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Grand Ballet</div>
+                                                <div class="circle__info-thema">Wordpress</div>
+                                                <div class="circle__info-price">$59</div>
+                                            </div>
+                                        </div>
+                                        <div class="basket__summ">
+                                            <div class="basket__summ-title">
+                                                <div class="basket__summ-total">Total</div>
+                                                <div class="basket__summ-price">$118</div>
+                                            </div>
+                                            <a class="basket__btn" href="#">Go to Cart</a>
+                                            <a class="basket__btn basket__btn-chekout" href="#">Go to Chekout</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-box">
+                                    <a class="user" href="#">
+                                        <div class="user__inner">
+                                            <div class="user__images">
+                                                <img src="images/content/user-login.jpg" alt="">
+                                            </div>
+                                            <div class="user__info">
+                                                <div class="user__name">Mike Hussy</div>
+                                                <div class="user__money">$171.00</div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <div class="user__menu">
+                                        <ul class="user__menu-list">
+                                            <li><a class="angle-right" href="#">Profile Page</a></li>
+                                            <li><a class="angle-right" href="#">Portfolio</a></li>
+                                            <li><a class="angle-right" href="#">Account Setting</a></li>
+                                            <li><a class="angle-right" href="#">Downloads</a></li>
+                                            <li><a class="angle-right" href="#">Wishlist</a></li>
+                                            <li><a class="angle-right" href="#">Upload Item</a></li>
+                                            <li><a class="angle-right" href="#">Statement</a></li>
+                                            <li><a class="angle-right" href="#">Withdraws</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <a class="header__btn header__btn-login header__btn-login--off" href="">Login</a>
+                                <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
+                                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
                             </div>
+                            <div class="header__btn-menu icon-user"></div>
                         </div>
                     </div>
                 </div>
                 <div class="header__menu">
                     <div class="container">
                         <nav class="menu">
+                            <div class="menu__btn">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
                             <ul class="menu__list">
                                 <li>
                                     <a href="#">Home</a>
@@ -222,7 +343,8 @@
                         <div class="products-page__content">
                             <div class="products-page__filter">
                                 <div class="products-page__filter-sort">
-                                    <button class="icon-sort-amount-desc"></button> Sort by: New Items <button class="icon-unsorted"></button>
+                                    <button class="icon-sort-amount-desc"></button> Sort by: New Items <button
+                                        class="icon-unsorted"></button>
                                 </div>
                                 <div>
                                     <button class="icon-th-large active"></button>
@@ -241,8 +363,14 @@
                                             <a class="products__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="products__item-text">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus.
+                                            </div>
                                         </div>
-                                        <div class="products__item-price">$19</div>
+                                        <div class="products__item-price">
+                                            $19
+                                            <span>Sales ( 14 )</span>
+                                        </div>
                                     </div>
                                     <div class="products__item-info">
                                         <a class="products__item-author" href="#">
@@ -252,6 +380,10 @@
                                         </a>
                                         <div class="products__item-star">
                                             <div class="rate-star"></div>(<span>05</span>)
+                                        </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
                                         </div>
                                     </div>
                                 </div>
@@ -278,6 +410,10 @@
                                         <div class="products__item-star">
                                             <div class="rate-star"></div>(<span>05</span>)
                                         </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="products__item">
@@ -303,10 +439,15 @@
                                         <div class="products__item-star">
                                             <div class="rate-star"></div>(<span>05</span>)
                                         </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="products__item">
-                                    <a class="products__item-img" style="background-image: url(images/content/product-item.jpg);" href="#"></a>
+                                    <a class="products__item-img"
+                                        style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                     <div class="products__item-content">
                                         <div class="products__item-name">
                                             <a class="products__item-title" href="#">
@@ -327,10 +468,15 @@
                                         <div class="products__item-star">
                                             <div class="rate-star"></div>(<span>05</span>)
                                         </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="products__item">
-                                    <a class="products__item-img" style="background-image: url(images/content/product-item.jpg);" href="#"></a>
+                                    <a class="products__item-img"
+                                        style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                     <div class="products__item-content">
                                         <div class="products__item-name">
                                             <a class="products__item-title" href="#">
@@ -351,10 +497,15 @@
                                         <div class="products__item-star">
                                             <div class="rate-star"></div>(<span>05</span>)
                                         </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="products__item">
-                                    <a class="products__item-img" style="background-image: url(images/content/product-item.jpg);" href="#"></a>
+                                    <a class="products__item-img"
+                                        style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                     <div class="products__item-content">
                                         <div class="products__item-name">
                                             <a class="products__item-title" href="#">
@@ -374,6 +525,10 @@
                                         </a>
                                         <div class="products__item-star">
                                             <div class="rate-star"></div>(<span>05</span>)
+                                        </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
                                         </div>
                                     </div>
                                 </div>
@@ -396,7 +551,7 @@
             <div class="footer__content">
                 <div class="container">
                     <div class="footer__inner">
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-adress">
                             <div class="footer__col-title">About Company</div>
                             <div class="footer__col-text">
                                 Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce
@@ -432,7 +587,7 @@
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-social">
                             <div class="footer__col-title">Follow Us On</div>
                             <ul class="footer__social-link">
                                 <li><a class="link-facebook" href="#"></a></li>
